// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) ConsentDial should render 1`] = `
<GraphCard
  cols={2}
  data={
    Array [
      Object {
        "x": "Consented",
        "y": 1,
      },
      Object {
        "x": "Not Consented",
        "y": 10,
      },
    ]
  }
  labelFontSize={3}
  text="100% of subjects have consented"
  title="Consented vs Not Consented Subjects"
/>
`;

exports[`(Component) ConsentDial should render if numbers are 0 1`] = `
<GraphCard
  cols={2}
  data={
    Array [
      Object {
        "x": "Consented",
        "y": 0,
      },
      Object {
        "x": "Not Consented",
        "y": 0,
      },
    ]
  }
  labelFontSize={3}
  text="100% of subjects have consented"
  title="Consented vs Not Consented Subjects"
/>
`;
